# adventofcode

year2022/day01/: CMakeLists.txt  main.cpp  solution.cpp  solution.h  solution_test.cpp
year2022/day02/: CMakeLists.txt  main.cpp  solution.cpp  solution.h  solution_test.cpp
year2022/day03/: CMakeLists.txt  main.cpp  solution.cpp  solution.h  solution_test.cpp
year2023/day01/: puzzle.md  solution.py  test_solution.py  test_trie.py  trie.py  weather_machine.md
year2023/day02/: puzzle.md  solution.ipynb  solution.py  test_solution.py
year2023/day03/: gear_finder.py  part_finder.py  position.py  puzzle.md  schematic_explorer.py  solution.py  test_solution.py
year2023/day04/: copy_queue.py  puzzle.md  solution.py  test_solution.py
year2023/day05/: almanac.py  map_entry.py  mapping.py  range.py  range_map.py  seed_range.py  solution.py  test_solution.py
year2023/day06/: record.py  solution.py  test_solution.py
year2023/day07/: hand.py  hand_type.py  solution.py  test_solution.py
year2023/day08/: loop_result.py  network.py  node.py  solution.py  test_solution.py
